--- a/css/QLNL/style.css
+++ b/css/QLNL/style.css
@@ -12,6 +12,13 @@ table {
     border-collapse: collapse;
     margin-top: 20px;
 }
+.table-material{
+    background-color: #ffffff;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
 th, td {
     border: 1px solid #ffffff;
     border-bottom:1px solid   #ec9262;
