--- a/css/QLNV/style.css
+++ b/css/QLNV/style.css
@@ -235,6 +235,7 @@ table.employee-list td a:hover {
     z-index: 100;
 }
 
+/* view nv */
 .back-button-view button {
     background-color: #FF7E29;
     color: white;
@@ -248,3 +249,14 @@ table.employee-list td a:hover {
 .back-button-view button:hover {
     background-color: #d46013;
 }
+
+.form-group input,
+.form-group textarea {
+    width: 100%;  
+    padding: 10px;  
+    margin-bottom: 15px;
+    border: 1px solid #ccc;  
+    border-radius: 4px;  
+    font-size: 16px;
+}
+
