--- a/css/ChamCong/style.css
+++ b/css/ChamCong/style.css
@@ -15,13 +15,14 @@
 }    
 .check-box {  
     display: flex;
-    gap: 20px;
+    gap: 60px;
     align-items: center;
 }  
 
 .check-box label {
     font-size: 16px; /* Increase font size */
     margin-right: 15px; /* Space between labels */
+    padding: 20px;
 }
 
 .check-box input[type="radio"] {
