--- a/css/QLNV/styles.css
+++ b/css/QLNV/styles.css
@@ -61,7 +61,12 @@ h3 {
 /* Thanh tìm kiếm */  
 .qlnv-search-bar {  
     margin-bottom: 20px;  
-}  
+} 
+
+#branch {
+    padding: 3px;
+    border-radius: 5px;
+}
 
 .qlnv-search-bar input[type="text"] {
     padding: 12px;
