--- a/css/ChamCong/style.css
+++ b/css/ChamCong/style.css
@@ -22,8 +22,9 @@
 .check-box label {
     font-size: 16px; /* Increase font size */
     margin-right: 15px; /* Space between labels */
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-top: 5px;
 }
 
 .check-box input[type="radio"] {
