--- a/css/QLNL/style.css
+++ b/css/QLNL/style.css
@@ -178,9 +178,11 @@ label {
     color: rgba(255, 255, 255, 0.7);
 }
 .chart{
-    width: 100%;
+    width: 80%;
     height: 400px;
-    border: 1px solid  #ff7f00;
-    border-radius: 10px;
+    background-color: #ffffff;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
-
