--- a/css/QLNL/style.css
+++ b/css/QLNL/style.css
@@ -145,7 +145,15 @@ label {
     border-radius: 4px;
     cursor: pointer;
 }
-
+.btn-update {
+    width: 100%;
+    padding: 10px;
+    background-color: #5d4037;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
 .btn-add:hover {
     background-color: #3e2723;
 }  
