--- a/css/QLNL/style.css
+++ b/css/QLNL/style.css
@@ -63,13 +63,12 @@ th {
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
+    width: 90%;
+    max-width: 500px;
     padding: 20px;
     background-color: #fff;
     border: 1px solid #ccc;
@@ -80,37 +79,57 @@ th {
 
 .container .header {
     display: flex;
-    margin: 0;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
-}
-
-.container h2 {
     margin-bottom: 20px;
 }
 
+.container h2 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #333;
+}
+
 .container .details {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 10px;
     width: 100%;
+}
+
+.container .details > * {
+    padding: 5px 0;
+}
+
+.container .details > *:nth-child(odd) {
+    font-weight: bold;
+    color: #555;
 }
 
 .btn-approve {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #db5a04;;
+    background-color: #db5a04;
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 10px;
+    width: 100%;
+    font-size: 1em;
 }
+
 .close-btn {
-    background-color:rgba(255, 0, 0, 0);
+    background-color: transparent;
     color: #db5a04;
-    border: white
+    border: none;
+    cursor: pointer;
+    font-size: 1.5em;
+    padding: 5px;
 }
+
 .close-btn:hover {
-    color: white;
+    color: #a94503;
 }
 /* themnguyenlieumoi */
 .container {
