--- a/css/taodonhang/style.css
+++ b/css/taodonhang/style.css
@@ -30,7 +30,7 @@ h1 {
 }
 
 .order-summary{
-    width: 33%;
+    width: 45%;
     background: #ffffff;
 }
 
@@ -51,16 +51,24 @@ h1 {
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);  
 }  
 
-.item-image {  
-    width: 60px;  
-    height: 60px;  
-    background-color: #ccc;  
-    display: flex;  
-    align-items: center;  
-    justify-content: center;  
-    border-radius: 5px;  
-    margin-right: 15px;  
-}  
+.item-image {
+    width: 60px;
+    height: 60px;
+    background-color: #ff9954;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    margin-right: 15px;
+    overflow: hidden; 
+}
+
+.item-image img {
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+}
+
 
 .item-name {  
     flex: 1;  
@@ -73,7 +81,7 @@ h1 {
 }  
 
 button {  
-    padding: 8px 12px;  
+    padding: 8px 10px;  
     color: white;  
     background-color: #FF7E29;  
     border: none;  
@@ -99,14 +107,14 @@ h2 {
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc; /* Đường viền cho bảng */
     align-items: center;
     padding-left: 10px;
     padding-right: 15px;
+}
+
+.order-table-td{
     display: flex;
-    justify-content: space-between;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    align-items: center;
 }
 
 #order-list {  
@@ -183,3 +191,27 @@ h2 {
     background-color: #ffe2d0;   
     transform: scale(1.02);
 }
+
+.btn-tang, .btn-giam {
+    background-color: white;
+}
+
+.btn-tang:hover, .btn-giam:hover {
+    background-color: white;
+}
+
+.bx-caret-left, .bx-caret-right {
+    font-size: 23px;
+    color: #000000;
+}
+
+.btn-order {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+.btn-thanhtoan, .btn-huy {
+    float: right;
+    margin-left: 20px;
+}
+
