--- a/css/taodonhang/styles.css
+++ b/css/taodonhang/styles.css
@@ -8,10 +8,19 @@
     padding: 20px;  
 }  
 
+body{
+    /* không cho chọn văn bản */
+    -webkit-user-select: none;  
+    -moz-user-select: none;     
+    -ms-user-select: none;    
+    user-select: none;
+}
+
 h1 {  
+    margin-top: -3px;
     color: #333;  
     text-align: center;  
-    margin-bottom: 20px;  
+    margin-bottom: 15px;  
 }  
 
 .flex-container {  
