--- a/layout/style.css
+++ b/layout/style.css
@@ -32,6 +32,8 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
+    z-index: 50;
+    position: relative;
     
 }
 
