--- a/css/qlkh/style.css
+++ b/css/qlkh/style.css
@@ -76,3 +76,7 @@ button.cancel {
     color: green;
     margin-top: 10px;
 }
+
+.table td, .table th {
+    border: none;  /* Bỏ viền các thẻ td và th */
+}
