--- a/css/dexuatmonmoi/main.css
+++ b/css/dexuatmonmoi/main.css
@@ -53,7 +53,7 @@ textarea {
     height: 100px;
     resize: vertical;
 }
-button[type="submit"] {
+#rec {
     background-color: #ff6600;
     color: white;
     border: none;
@@ -64,6 +64,6 @@ button[type="submit"] {
     font-weight: bold;
     transition: background-color 0.3s ease;
 }
-button[type="submit"]:hover {
+#rec:hover {
     background-color: #e55b00;
 }
