--- a/css/DAY/day.css
+++ b/css/DAY/day.css
@@ -253,11 +253,12 @@ th {
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    background-color: #fefefe !important;
+    margin: 5% auto !important;
+    padding: 20px !important;
+    border: 1px solid #888 !important;
+    width: 80% !important;
+    display: block !important;
 }
 
 /* Nút đóng modal */
@@ -312,13 +313,14 @@ th {
 }
 
 #logoutModal .modal-content {
-    background-color: #ffffff; /* Màu nền trắng cho nội dung modal */
-    margin: 15% auto; /* Căn giữa modal */
-    padding: 20px; /* Khoảng cách nội dung */
-    border-radius: 8px; /* Bo tròn góc */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Đổ bóng cho modal */
-    width: 80%; /* Chiều rộng tối đa */
-    max-width: 400px; /* Chiều rộng tối đa */
+    background-color: #ffffff !important; /* Màu nền trắng cho nội dung modal */
+    margin: 15% auto !important; /* Căn giữa modal */
+    padding: 20px !important; /* Khoảng cách nội dung */
+    border-radius: 8px !important; /* Bo tròn góc */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important; /* Đổ bóng cho modal */
+    width: 80% !important; /* Chiều rộng tối đa */
+    max-width: 400px !important; /* Chiều rộng tối đa */
+    display: block !important;
 }
 
 #logoutModal .close {
