--- a/css/QLMA/qlma.css
+++ b/css/QLMA/qlma.css
@@ -1,4 +1,4 @@
-/* qlnlchuoicuahang */
+/* quản lý món ăn */
 .btn-detail{
     background-color: #ec9262;
     color: white;
@@ -77,7 +77,7 @@ th::after {
     border-radius: 5px;
 }
 
-/* chitietnguyenlieu */
+/* chitietmonan */
 .container {
     display: flex;
     flex-direction: column;
@@ -153,7 +153,7 @@ th::after {
 .close-btn:hover {
     color: #a94503;
 }
-/* themnguyenlieumoi */
+/* themmonanmoi */
 .form-group {
     margin-bottom: 15px;
 }
@@ -223,80 +223,71 @@ label {
 .dropdown:hover .dropdown-menu {
     display: block;
 }
-/* thongkenguyenlieu */
-.ingredient{
-    width: 76%;
-    padding: 5px;
-    border: 1px solid #ff9933;
-    background-color: #ff7f00;
-    color: white;
-    border-radius: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.date-input {
-    width: 70%;
-    padding: 5px;
-    border: 1px solid #ff9933;
-    background-color: #ff7f00;
-    color: white;
-    border-radius: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-.date-input::placeholder {
-    color: rgba(255, 255, 255, 0.7);
-}
-
-.cards {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-.card {
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+.headerdetail{
+    background-color: #ed9232;
     padding: 20px;
-    flex: 1;
-    text-align: center;
+    display: flex
+;
+    align-items: center;
+}
+.headerdetail img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+.detail{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10000;
+    overflow: auto;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
-.card h3 {
-    font-size: 16px;
-    margin-bottom: 10px;
+.info {
+    display: grid
+;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    padding: 2rem;
 }
 
-.card .value {
-    font-size: 24px;
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     font-weight: bold;
-    margin-bottom: 5px;
-}
-.select{
-    width: 96.5%;
-    height: auto;
-    background-color: #ffffff;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    unicode-bidi: isolate;
 }
 
-.chart{
-    width: 96.5%;
-    height: 700px;
-    background-color: #ffffff;
-    padding: 20px;
-    margin-bottom: 20px;
+.info-item {
+    display: flex
+;
+    align-items: center;
+    padding: 0.75rem;
+    background-color: #f8f9fa;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    transition: all 0.2s ease;
+}
+
+.hidden{
+    display: none;
 }
 
 .scrollable-container {
-    height: 200px; 
-    overflow-y: scroll; 
+    height: 200px;
+    overflow-y: scroll;
     border: 1px solid #ccc; 
-    padding: 10px; /* Khoảng cách bên trong */
+    padding: 10px; 
     background-color: #fff; 
 }
