--- a/css/qlkh/style.css
+++ b/css/qlkh/style.css
@@ -53,6 +53,18 @@ button {
     margin: 4px 2px;
     cursor: pointer;
 }
+#submitTimKiem{
+    background-color: #768076;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 button.cancel {
     background-color: #f44336;
 }
