--- a/css/QLNV/views.css
+++ b/css/QLNV/views.css
@@ -124,11 +124,12 @@ body {
     border-radius: 5px;  
     cursor: pointer;  
     font-size: 14px;  
-    transition: background-color 0.3s ease;  
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .back-button-view button:hover {  
-    background-color: #da6111; 
+    background-color: #ff5e00; 
+    transform: scale(1.1);
 }
 
 .bxs-user {
