--- a/css/ChamCong/styles.css
+++ b/css/ChamCong/styles.css
@@ -26,7 +26,7 @@
 }  
 
 .cc-search-bar button:hover {  
-    background-color: #da6111;  
+    background-color: #ff5e00;  
 } 
 
 /* Chọn chi nhánh */  
@@ -51,11 +51,12 @@
     border: none;  
     border-radius: 5px;  
     cursor: pointer;  
-    transition: background-color 0.3s ease; 
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }  
 
 .submit-ChamCong:hover {  
-    background-color: #d4671f;   
+    background-color: #ff5e00;  
+    transform: scale(1.1); 
 }    
 .check-box {  
     display: flex;
@@ -103,4 +104,26 @@ input[type="date"] {
     font-size: 16px;
 }
 
+#employee-list select {
+    padding: 3px;
+    border-radius: 8px;
+    border: 1px solid #7e7e7e;
+}
+
+/* Đổi màu viền khi select được focus */
+#employee-list select:focus {
+    border: 2px solid #FF7E29;
+}
+
+/* Đổi màu khi hover lên option */
+#employee-list select option:hover {
+    background-color: #FF7E29;
+    color: white;
+}
+
+/* Đổi màu khi option được chọn */
+#employee-list select option:checked {
+    background-color: #FF7E29;
+    color: white;
+}
 
